# ytmusic-spotify-migrator

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  literature.md  pyproject.toml
backend/: README.md  main.py  requirements.txt
frontend/: README.md  index.html  package-lock.json  package-vite.json  package.json  postcss.config.js  tailwind.config.js
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: Authentication.tsx  FileUpload.tsx  Header.tsx  InteractiveDecision.tsx  LiveMigration.tsx  MigrationProgress.tsx  Results.tsx  ServiceSelector.tsx
frontend/src/utils/: api.ts
scripts/: cleanup.sh  export_requirements.sh  setup_dev.sh
tests/: conftest.py  test_normalize.py  test_package.py
tools/: README.md
tools/text-to-csv/: README.md  cleaner.py  music-taste.txt
yt2spot/: __init__.py  cli.py  config.py  incremental.py  input_parser.py  interactive.py  logging_utils.py  models.py  playlist.py  report.py  spotify_client.py  version.py
yt2spot/matcher/: __init__.py  decision.py  normalize.py  scoring.py  search.py
